# workshop-03-docker

./: Dockerfile  README.md  app.py  pyproject.toml
